[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."

# Gradual type checking improvements
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

# Exclude test directories for now (394 errors in tests vs 126 in production code)
# We will address production code first, then gradually enable checking for tests
[[tool.mypy.overrides]]
module = ["*.tests.*", "*/tests/*", "tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["webhook.*", "category.*", "dashboard.*", "group.*", "role.*", "trigger.*", "job.*", "acl.*", "airone.auth.*", "user.*"]
disallow_untyped_defs = true

[tool.ruff]
# Pyflakes (F), pycodestyle (E, W), isort (I)
lint.select = ["E", "F", "I", "W"]
line-length = 100
extend-exclude = ["./*/migrations", "manage.py", "./node_modules"]

[tool.ruff.lint.per-file-ignores]
"./airone/tests/test_elasticsearch.py" = ["E501"]

[project]
name = "airone"
version = "3.73.0"
description = ""
authors = [{name = "Hiroyasu OHYAMA"}]
license = {text = "GPLv2"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3==1.42.62",
    "celery==5.5.3",
    "django-configurations==2.5.1",
    "ddtrace==2.21.12",
    "django-environ==0.12.0",
    "django-filter==24.3",
    "django-import-export==4.4.0",
    "django-multidb-router>=0.11",
    "django-simple-history==3.11.0",
    "django-storages==1.14.6",
    "django==5.2.12",
    "djangorestframework==3.16.1",
    "markdown>=3.7",
    "drf-spectacular==0.29.0",
    "elasticsearch==8.17.0",
    "gunicorn==23.0.0",
    "lxml_html_clean==0.4.4",
    "mysqlclient==2.2.0",
    "natsort==8.4.0",
    "python-ldap==3.4.5",
    "python3-saml==1.12.0",
    "pyyaml==6.0.1",
    "requests==2.33.0",
    "social-auth-app-django==5.4.3",
    "social-auth-core==4.5.1",
    "whitenoise==6.12.0",
    "pydantic>=2.10.6",
    "pagoda-plugin-sdk",
]

[tool.uv.sources]
pagoda-plugin-sdk = { path = "./plugin/sdk", editable = true }
pagoda-hello-world-plugin = { path = "./plugin/examples/pagoda-hello-world-plugin", editable = true }
pagoda-cross-entity-sample-plugin = { path = "./plugin/examples/pagoda-cross-entity-plugin", editable = true }
pagoda-echo-plugin = { git = "https://github.com/syucream/pagoda-backend-plugin-example" }

[tool.uv]
override-dependencies = ["pagoda-plugin-sdk"]

[project.optional-dependencies]
dev = [
    "coverage>=7.3.0",
    "django-debug-toolbar==4.4.6",
    "flower==1.2.0",
    "mypy>=1.15.0",
    "requests-html==0.10.0",
    "types-requests>=2.31.0.6",
    "types-pyyaml>=6.0.12.20241230",
    "types-pytz>=2025.1.0.20250204",
    "types-mock>=5.1.0.1",
    "ruff>=0.9.9",
    "tblib>=3.0.0",
    "lxml-html-clean>=0.4.0",
]
plugins = [
    "pagoda-hello-world-plugin",
    "pagoda-cross-entity-sample-plugin",
    "pagoda-echo-plugin",
]
