[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
follow_imports = "normal"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
explicit_package_bases = true
# Include plugin/sdk so mypy resolves the editable-installed pagoda_plugin_sdk
# package against its real (now py.typed) sources instead of treating it as Any.
mypy_path = [".", "plugin/sdk"]
# Each plugin package ships its own top-level "tests" package. Once
# plugin/sdk is on mypy_path they collide as duplicate modules, so exclude
# plugin test trees from discovery (they are already ignored for errors).
exclude = ['plugin/.*/tests/', 'plugin/examples/', 'virtualenv_old/']

# Gradual type checking improvements
check_untyped_defs = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
strict_equality = true
warn_unreachable = true
no_implicit_reexport = true
disallow_untyped_calls = true
extra_checks = true
disallow_untyped_decorators = true
disallow_any_generics = true
warn_return_any = true
disallow_subclassing_any = true
# Production code (including plugin/sdk and tools) must be fully annotated.
# Test and migration trees are exempted via the ignore_errors overrides below.
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.django-stubs]
django_settings_module = "airone.settings"
strict_settings = false

[[tool.mypy.overrides]]
module = ["*.tests.*", "*/tests/*", "tests.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["*.migrations.*"]
ignore_errors = true

# entry is the largest, most complex app; it is typed in a follow-up PR so this
# PR can be reviewed in a focused slice.
[[tool.mypy.overrides]]
module = [
    "entry.api_v1.views",
    "entry.api_v2.serializers",
    "entry.api_v2.views",
    "entry.services",
    "entry.tasks",
    "entry.views",
]
ignore_errors = true

[tool.ruff]
# Pyflakes (F), pycodestyle (E, W), isort (I)
lint.select = ["E", "F", "I", "W"]
line-length = 100
extend-exclude = ["./*/migrations", "manage.py", "./node_modules"]

[tool.ruff.lint.per-file-ignores]
"./airone/tests/test_elasticsearch.py" = ["E501"]

[project]
name = "airone"
version = "3.73.0"
description = ""
authors = [{name = "Hiroyasu OHYAMA"}]
license = {text = "GPLv2"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.42.62",
    "celery>=5.6.0,<6",
    "django-configurations==2.5.1",
    "ddtrace==4.8.2",
    "django-environ==0.12.0",
    "django-filter==24.3",
    "django-import-export==4.4.0",
    "django-multidb-router>=0.11",
    "django-simple-history==3.11.0",
    "django-storages==1.14.6",
    "django==5.2.15",
    "djangorestframework==3.16.1",
    "markdown>=3.7",
    "drf-spectacular==0.29.0",
    "elasticsearch==8.17.0",
    "gunicorn==23.0.0",
    "mysqlclient>=2.2.8",
    "natsort==8.4.0",
    "python-ldap==3.4.5",
    "python3-saml==1.12.0",
    # lxml and xmlsec are transitive dependencies of python3-saml (SAML auth).
    # They are pinned explicitly ONLY to avoid the runtime error
    # "lxml & xmlsec libxml2 library version mismatch": xmlsec must use a wheel
    # built against the same libxml2 that lxml bundles. Remove these two pins if
    # python3-saml is removed.
    "lxml==6.1.0",
    "xmlsec==1.3.17",
    "pyyaml==6.0.1",
    "requests==2.33.0",
    "social-auth-app-django==5.4.3",
    "social-auth-core==4.5.1",
    "whitenoise==6.12.0",
    "pydantic>=2.10.6",
    "pagoda-plugin-sdk",
]

[tool.uv.sources]
pagoda-plugin-sdk = { path = "./plugin/sdk", editable = true }
pagoda-hello-world-plugin = { path = "./plugin/examples/pagoda-hello-world-plugin", editable = true }
pagoda-cross-entity-sample-plugin = { path = "./plugin/examples/pagoda-cross-entity-plugin", editable = true }
pagoda-echo-plugin = { git = "https://github.com/syucream/pagoda-backend-plugin-example" }

[tool.uv]
override-dependencies = ["pagoda-plugin-sdk"]

[project.optional-dependencies]
dev = [
    "celery-types>=0.22.0",
    "coverage>=7.3.0",
    "django-debug-toolbar==4.4.6",
    "django-stubs[compatible-mypy]>=5.2.0",
    "djangorestframework-stubs[compatible-mypy]>=3.15.0",
    "flower==1.2.0",
    "mypy>=1.15.0",
    "requests-html==0.10.0",
    "types-requests>=2.31.0.6",
    "types-pyyaml>=6.0.12.20241230",
    "types-pytz>=2025.1.0.20250204",
    "types-mock>=5.1.0.1",
    "ruff>=0.9.9",
    "tblib>=3.0.0",
    # required by requests-html (lxml.html.clean was split into this package in
    # lxml 5.2+). Used only in tests; remove if requests-html is removed.
    "lxml-html-clean>=0.4.0",
]
plugins = [
    "pagoda-hello-world-plugin",
    "pagoda-cross-entity-sample-plugin",
    "pagoda-echo-plugin",
]
