[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pagoda-core"
version = "1.0.0"
description = "Core library for Pagoda plugin system"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pagoda Development Team", email = "dev@pagoda.pw"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["pagoda", "plugin", "framework", "django", "rest", "api"]
dependencies = [
    "Django>=3.2",
    "djangorestframework>=3.12",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/dmm-com/pagoda"
Documentation = "https://pagoda.readthedocs.io/"
Repository = "https://github.com/dmm-com/pagoda.git"
Issues = "https://github.com/dmm-com/pagoda/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pagoda_core*"]

[tool.setuptools.package-data]
pagoda_core = ["py.typed"]