[project]
name = "pagoda-hello-world-plugin"
version = "1.0.0"
description = "Hello World Plugin for Pagoda"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Pagoda Development Team", email = "dev@pagoda.pw"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = ["pagoda", "plugin", "development", "api"]
dependencies = [
    "pagoda-plugin-sdk",
    "Django>=3.2",
    "djangorestframework>=3.12",
]
requires-python = ">=3.8"

[project.entry-points."pagoda.plugins"]
hello-world = "pagoda_hello_world_plugin.plugin:HelloWorldPlugin"

[project.urls]
Homepage = "https://github.com/syucream/airone"
Documentation = "https://airone.readthedocs.io/"
Repository = "https://github.com/syucream/airone.git"
Issues = "https://github.com/syucream/airone/issues"

[tool.uv.sources]
# enable it on sdk development
pagoda-plugin-sdk = { git = "https://github.com/dmm-com/pagoda.git", tag = "v3.153.0", subdirectory = "plugin/sdk" }
# pagoda-plugin-sdk = { path = "../../../plugin/sdk", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pagoda_hello_world_plugin"]